Added icons from Font Awesome to the contacts page.

--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
 
         <!-- Bootstrap core CSS -->
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
@@ -49,9 +50,9 @@
             </header>
             <main role="main" class="container">
                 <h1 class="text-center fancy-title text-white">Contact Me</h1>
-                <p class="text-center lead">Github: https://github.com/ADeeley </p>
-                <p class="text-center lead">Email: ad.deeley@gmail.com </p>
-                <p class="text-center lead"><a href="https://www.linkedin.com/in/adam-deeley-270a5a99/">LinkedIn</a></p>
+                <p class="text-center lead"><a href="https://github.com/ADeeley"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
+                <p class="text-center lead"><a href="ad.deeley@gmail.com"><i class="fa fa-envelope-o fa-4x" aria-hidden="true"></i></a>
+                <p class="text-center lead"><a href="https://www.linkedin.com/in/adam-deeley-270a5a99/"><i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a></p>
             </main>
             <footer class="footer">
                 <div class="container">
@@ -63,6 +64,7 @@
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+        <script src="https://use.fontawesome.com/8df8947145.js"></script>
         <script src="js/src/index.js"></script>
     </body>
 </html>
