--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
                             <h5 class="card-title">Books Sold Compared to Books Written</h5>
                             <p class="card-text">A graph build with D3 to show the relationship between the number of books an author has written to the number of books sold.</p>
                             <form action="https://github.com/ADeeley/Books_sold">
-                                <button class="btn btn-primary">Github Source</button>
+                                <button class="btn btn-primary">Fork Me</button>
                             </form>
                         </div>
                         <div class="card-footer">
